--- a/package.json
+++ b/package.json
@@ -20,15 +20,22 @@
         "@angular/http": "4.1.3",
         "@angular/platform-browser": "4.1.3",
         "@angular/platform-browser-dynamic": "4.1.3",
+        "@ionic-native/android-permissions": "^4.5.3",
+        "@ionic-native/camera": "^4.5.3",
         "@ionic-native/core": "3.12.1",
+        "@ionic-native/file": "^4.5.3",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "^2.0.1",
         "@ngx-translate/core": "^7.1.0",
         "@ngx-translate/http-loader": "^0.1.0",
         "cordova-android": "^6.2.3",
+        "cordova-plugin-android-permissions": "^1.0.0",
+        "cordova-plugin-camera": "^2.4.1",
+        "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-file": "^4.3.3",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
@@ -57,7 +64,10 @@
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
-            "cordova-sqlite-storage": {}
+            "cordova-sqlite-storage": {},
+            "cordova-plugin-camera": {},
+            "cordova-plugin-file": {},
+            "cordova-plugin-android-permissions": {}
         },
         "platforms": [
             "android"
