--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@angular/platform-browser": "4.1.3",
         "@angular/platform-browser-dynamic": "4.1.3",
         "@ionic-native/android-permissions": "^4.5.3",
+        "@ionic-native/app-version": "^4.5.3",
         "@ionic-native/camera": "^4.5.3",
         "@ionic-native/core": "3.12.1",
         "@ionic-native/file": "^4.5.3",
@@ -31,6 +32,7 @@
         "@ngx-translate/http-loader": "^0.1.0",
         "cordova-android": "^6.2.3",
         "cordova-plugin-android-permissions": "^1.0.0",
+        "cordova-plugin-app-version": "^0.1.9",
         "cordova-plugin-camera": "^2.4.1",
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-device": "^1.1.4",
@@ -65,7 +67,8 @@
             "cordova-sqlite-storage": {},
             "cordova-plugin-camera": {},
             "cordova-plugin-file": {},
-            "cordova-plugin-android-permissions": {}
+            "cordova-plugin-android-permissions": {},
+            "cordova-plugin-app-version": {}
         },
         "platforms": [
             "android"
